
EXTRA_DIST = sequence_currval1.testcase \
	sequence_currval2.testcase \
	sequence_lastval.testcase \
	sequence_nextval1.testcase \
	sequence_nextval2.testcase \
	sequence_setval1.testcase \
	sequence_setval2.testcase \
	sequence_setval3.testcase \
	sequence_setval4.testcase \
	sequence_setval5.testcase 
	
