
EXTRA_DIST =  voronoj10.testcase \
	voronoj11.testcase \
	voronoj12.testcase \
	voronoj13.testcase \
	voronoj14.testcase \
	voronoj15.testcase \
	voronoj16.testcase \
	voronoj17.testcase \
	voronoj18.testcase \
	voronoj19.testcase \
	voronoj1.testcase \
	voronoj20.testcase \
	voronoj2.testcase \
	voronoj3.testcase \
	voronoj4.testcase \
	voronoj5.testcase \
	voronoj6.testcase \
	voronoj8.testcase \
	voronoj9.testcase 
